--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ header {
   }
 }
 .sub-heading {
-  margin-top: 14%;
+  margin-bottom: 14%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -220,11 +220,11 @@ button:hover {
   justify-content: space-around;
   list-style: none;
   height: 12em;
-  width: 70%;
+  width: 50%;
 }
 .contact-ul a {
   text-decoration: none;
-  font-size: 2em;
+  font-size: 3em;
   color: #2980b9;
 }
 .contact-ul a:hover {
@@ -259,7 +259,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 6em;
+  height: 8em;
   padding-bottom: 2%;
 }
 .my-resume a {
@@ -272,6 +272,7 @@ button:hover {
 }
 .fa-file-text {
   font-size: 2.5em;
+  margin-bottom: 8%;
 }
 #scroll {
   position:fixed;
@@ -308,7 +309,7 @@ footer {
   z-index: 1
 }
 
-/*------------ MEDIA QUERY: MOBILE ------------*/
+/*------------ MEDIA QUERY: MOBILE DEVICES ------------*/
 
 @media (min-width: 300px) and (max-width: 600px) {
   .logo {
