--- a/main.css
+++ b/main.css
@@ -313,10 +313,10 @@ footer {
 
 @media (min-width: 300px) and (max-width: 600px) {
   .logo {
-    font-size: 1.25em;
+    font-size: 1.5em;
   }
   a.contact-scroll {
-    font-size: 1.25em;
+    font-size: 1.5em;
   }
   header {
     background-position: left bottom;
@@ -326,9 +326,15 @@ footer {
   }
   .main-heading h4 {
     font-size: 1.5em;
+    margin: 2% 4%;
   }
   .main-heading a {
     font-size: 1em;
+    margin: 1%;
+  }
+  .sub-heading a {
+    font-size: 1.25em;
+    margin-top: 20%;
   }
   .projects {
     height: 88em;
