Add WFD to project section. Adjust media queries for responsive. Edit HTML links, add desktop image for WFD.

--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ header {
 }
 .projects {
   background-color: #ecf0f1;
-  height: 70em;
+  height: 95em;
 }
 .projects h3 {
   font-size: 2em;
@@ -139,12 +139,16 @@ header {
 .project-image img:hover {
   opacity: 0.7;
 }
+#project-first {
+background-color: #D9F7FA;
+width: 100%;
+padding: 0% 5%;
+}
 #project-mid {
   background-color: #1abc9c;
   width: 100%;
   padding: 0% 5% 0% 5%;
 }
-
 .a-button {
     display: inline-block;
     margin-top: 2%;
@@ -162,7 +166,6 @@ header {
     background: #2980b9;
     cursor: auto;
 }
-
 .fa-link {
   font-size: 1em;
   padding: 1%;
@@ -212,7 +215,7 @@ header {
 .contact {
   background-color: #F5F0F6;
 }
-.contact h3 {
+.contact-links h3 {
   font-size: 2em;
   color: #34495e;
   text-align: center;
@@ -341,7 +344,7 @@ footer {
     margin-top: 20%;
   }
   .projects {
-    height: 88em;
+    height: 115em;
   }
   .project-flex {
     flex-direction: column;
@@ -392,7 +395,7 @@ footer {
     height: 0;
     overflow: hidden;
   }
-  .contact {
+  .contact-links {
     height: 8em;
   }
   .contact-ul {
@@ -426,6 +429,9 @@ footer {
   a.contact-scroll {
     font-size: 1.75em;
   }
+  .sub-heading {
+    margin: 11% 0% 0% 0%;
+  }
   .main-heading h1 {
     font-size: 2.5em;
   }
@@ -433,10 +439,10 @@ footer {
     font-size: 1.75em;
   }
   .projects {
-    height: 97em;
+    height: 140em;
   }
   .project-flex {
-    height: 31em;
+    height: 34em;
     flex-direction: column;
     justify-content: center;
   }
@@ -484,7 +490,7 @@ footer {
     height: 0;
     overflow: hidden;
   }
-  .contact {
+  .contact-links {
     height: 10em;
   }
   .contact-ul {
@@ -523,7 +529,7 @@ footer {
   .language-images img {
     width: 11vw;
   }
-  .contact {
+  .contact-links {
     height: 12em;
   }
   .contact-ul {
@@ -551,13 +557,13 @@ footer {
     margin-top: 8%;
   }
   .projects {
-    height: 99em;
+    height: 110em;
   }
   .projects h3 {
     font-size: 3em;
   }
   .project-flex {
-    height: 30em;
+    height: 32em;
   }
   .project-info h4 {
     font-size: 2.25em;
@@ -575,7 +581,7 @@ footer {
   .languages h3 {
     font-size: 3em;
   }
-  .contact {
+  .contact-links {
     height: 15em;
   }
   .contact h3 {
